@@ -2,6 +2,7 @@
 
 v2.2
 ----
+ - the localizer tool now checks if the locale changes in the session
  - fix: authentication filter now also remembers the query string of the saved request
  - $query now displays a nice content as a map
  - added entityref.delete(string) and entityref.delete(number) for unique primary cols
